<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.3.3</version>
        <relativePath/>
    </parent>

    <packaging>pom</packaging>
    <groupId>io.metersphere</groupId>
    <artifactId>metersphere</artifactId>
    <version>${revision}</version>
    <name>metersphere</name>
    <description>MeterSphere</description>

    <properties>
        <revision>3.x</revision>
        <java.version>21</java.version>
        <platform-plugin-sdk.version>1.5.0</platform-plugin-sdk.version>
        <shiro.version>2.0.1</shiro.version>
        <java-websocket.version>1.5.4</java-websocket.version>
        <easyexcel.version>3.3.3</easyexcel.version>
        <dom4j.version>2.1.4</dom4j.version>
        <guava.version>33.0.0-jre</guava.version>
        <pagehelper.version>6.1.0</pagehelper.version>
        <metersphere-jmeter-functions.version>3.0</metersphere-jmeter-functions.version>
        <metersphere-jmeter-assertions.version>3.2</metersphere-jmeter-assertions.version>
        <quartz-starter.version>1.0.7</quartz-starter.version>
        <redisson-starter.version>3.32.0</redisson-starter.version>
        <mybatis-starter.version>3.0.3</mybatis-starter.version>
        <reflections.version>0.10.2</reflections.version>
        <commons-io.version>2.15.1</commons-io.version>
        <commons-text.version>1.11.0</commons-text.version>
        <xstream.version>1.4.20</xstream.version>
        <xmlbeans.version>5.1.1</xmlbeans.version>
        <swagger-parser.version>2.1.21</swagger-parser.version>
        <swagger.version>2.2.21</swagger.version>
        <springdoc-openapi-ui.version>2.4.0</springdoc-openapi-ui.version>
        <commonmark.version>0.19.0</commonmark.version>
        <commons-compress.version>1.26.0</commons-compress.version>
        <htmlcleaner.version>2.29</htmlcleaner.version>
        <xmindjbehaveplugin.version>0.8</xmindjbehaveplugin.version>
        <metersphere-plugin-core.version>2.0</metersphere-plugin-core.version>
        <plexus.version>4.0.0</plexus.version>
        <common-random.version>1.0.21</common-random.version>
        <generex.version>1.0.2</generex.version>
        <json-schema-validator.version>2.2.14</json-schema-validator.version>
        <xz.version>1.9</xz.version>
        <flatten.version>1.6.0</flatten.version>
        <jmeter.version>5.6.3</jmeter.version>
        <codehaus-groovy.version>3.0.20</codehaus-groovy.version>
        <metersphere-scriptengine.version>1.1.1</metersphere-scriptengine.version>
        <docker-java.version>3.3.4</docker-java.version>
        <commons-beanutils.version>1.9.4</commons-beanutils.version>
        <hessian-lite.version>3.2.13</hessian-lite.version>
        <dec.version>0.1.2</dec.version>
        <dingtalk-sdk.version>2.0.0</dingtalk-sdk.version>
        <dingtalk-client.version>2.0.77</dingtalk-client.version>
        <minio.version>8.5.9</minio.version>
        <commons-collections4.version>4.4</commons-collections4.version>
        <kubernetes-client.version>6.8.0</kubernetes-client.version>
        <jgit.version>6.8.0.202311291450-r</jgit.version>
        <embedded.version>3.1.6</embedded.version>
        <otp-java.version>2.0.1</otp-java.version>
        <mockserver-client-java.version>5.15.0</mockserver-client-java.version>
        <mysql-connector-java.version>8.3.0</mysql-connector-java.version>
        <!-- frontend -->
        <frontend-maven-plugin.version>1.12.1</frontend-maven-plugin.version>
        <node.version>v20.8.1</node.version>
        <pnpm.version>8.4.0</pnpm.version>
        <!--        -->
        <skipAntRunForJenkins>false</skipAntRunForJenkins>
        <jacoco.version>0.8.12</jacoco.version>
        <pf4j.version>3.10.0</pf4j.version>
        <!--   sonar     -->
        <sonar.organization>metersphere</sonar.organization>
        <sonar.host.url>https://sonarcloud.io</sonar.host.url>

        <!-- 用于解析 ${__jexl2} 和 ${__jexl3} 函数变量 -->
        <commons-jexl.version>2.1.1</commons-jexl.version>
        <commons-jexl3.version>3.3</commons-jexl3.version>
        <revision>3.x</revision>
        <monitoring-engine.revision>3.1</monitoring-engine.revision>
        <swagger-core-jakarta.revision>2.2.20</swagger-core-jakarta.revision>

    </properties>

    <modules>
        <module>frontend</module>
        <module>backend</module>
    </modules>


    <build>
        <resources>
            <resource>
                <directory>src/main/java</directory>
                <includes>
                    <include>**/*.properties</include>
                    <include>**/*.xml</include>
                    <include>**/*.json</include>
                    <include>**/*.tpl</include>
                    <include>**/*.js</include>
                </includes>
                <filtering>false</filtering>
            </resource>
            <resource>
                <directory>src/main/resources</directory>
                <includes>
                    <include>**/*</include>
                </includes>
                <filtering>false</filtering>
            </resource>
        </resources>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <release>${java.version}</release>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>flatten-maven-plugin</artifactId>
                <version>${flatten.version}</version>
                <configuration>
                    <updatePomFile>true</updatePomFile>
                    <flattenMode>resolveCiFriendliesOnly</flattenMode>
                </configuration>
                <executions>
                    <execution>
                        <id>flatten</id>
                        <phase>process-resources</phase>
                        <goals>
                            <goal>flatten</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>flatten.clean</id>
                        <phase>clean</phase>
                        <goals>
                            <goal>clean</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>${jacoco.version}</version>
                <configuration>
                    <excludes>
                        <exclude>io/metersphere/*/mapper/**</exclude>
                        <exclude>io/metersphere/*/domain/**</exclude>
                        <exclude>io/metersphere/handler/**</exclude>
                        <exclude>io/metersphere/**/dto/**</exclude>
                        <exclude>io/metersphere/**/config/**</exclude>
                        <exclude>io/metersphere/**/constants/**</exclude>
                        <exclude>io/metersphere/**/utils/**</exclude>
                        <exclude>io/metersphere/*/excel/**</exclude>
                        <exclude>io/metersphere/sdk/**</exclude>
                        <exclude>io/metersphere/provider/**</exclude>
                        <exclude>io/metersphere/plugin/**</exclude>
                        <exclude>io/metersphere/*/job/**</exclude>
                        <exclude>io/metersphere/system/notice/**</exclude>
                        <exclude>io/metersphere/system/schedule/**</exclude>
                        <exclude>io/metersphere/system/security/**</exclude>
                        <exclude>io/metersphere/system/controller/handler/**</exclude>
                    </excludes>
                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <goal>prepare-agent</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>report</id>
                        <phase>prepare-package</phase>
                        <goals>
                            <goal>report</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
    <distributionManagement>
        <repository>
            <id>metersphere-public</id>
            <url>https://repository.fit2cloud.com/repository/metersphere/</url>
        </repository>
    </distributionManagement>
    <repositories>
        <repository>
            <id>central</id>
            <url>https://repo.maven.apache.org/maven2</url>
        </repository>
        <repository>
            <id>metersphere-public</id>
            <url>https://repository.fit2cloud.com/repository/metersphere/</url>
        </repository>
    </repositories>
    <pluginRepositories>
        <pluginRepository>
            <id>central</id>
            <url>https://repo.maven.apache.org/maven2</url>
        </pluginRepository>
        <pluginRepository>
            <id>metersphere-public</id>
            <url>https://repository.fit2cloud.com/repository/metersphere/</url>
        </pluginRepository>
    </pluginRepositories>
</project>
